...
        app:layout_constraintStart_toStartOf="@id/sort_photos"
        app:layout_constraintTop_toTopOf="@id/sort_photos"
        app:srcCompat="@drawable/ellipse"
        tools:ignore="ContentDescription" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/images_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
